fixing button alignment to center

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
 
   transition: background-color 0.8s ease;
 }
@@ -79,4 +83,8 @@
 .play-pause-button {
   width: 4rem;
   height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
 }
